[Docs] #5 도움 주신 분 기재

--- a/tensorflow_siamese_net/kaggle_siamese.ipynb
+++ b/tensorflow_siamese_net/kaggle_siamese.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1c4039f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 도움을 주신 분\n",
+    "허찬영\n",
+    "Instagram: @chan0__heo\n",
+    "Email: hcn98@mju.ac.kr\n",
+    "Affiliation: Data Science Lab (MJU)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "bfcbfa03",
    "metadata": {},
