[Docs] #5 소속 표기 변경

--- a/tensorflow_siamese_net/kaggle_siamese.ipynb
+++ b/tensorflow_siamese_net/kaggle_siamese.ipynb
@@ -11,7 +11,7 @@
     "허찬영\n",
     "Instagram: @chan0__heo\n",
     "Email: hcn98@mju.ac.kr\n",
-    "Affiliation: Data Science Lab (MJU)"
+    "Department: Data Science Lab (MJU)"
    ]
   },
   {
